--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
      <!-- HEADER: NAV + HERO -->
-     <header class="debug">
-        <nav class="container flexbox debug">
+     <header>
+        <nav class="container flexbox">
             <img src="img/logo.svg" alt="logo">
 
             <ul class="flexbox">
@@ -24,7 +24,16 @@
             <a class="btn" href="#">Accedi</a>
         </nav>
 
-        <section class="hero"></section>
+        <!-- <section class="hero">
+            <div class="inner-hero">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae rem corporis explicabo repellat, quis ab atque pariatur esse, voluptate, harum optio itaque iusto? Itaque delectus modi dignissimos molestias in ipsum reiciendis eaque suscipit ut aspernatur accusamus vero molestiae, maxime repellat?</p>
+                <div class="buttons">
+                    <a href="#" class="btn">Scarica per mac</a>
+                    <a href="#" class="btn">Apri Discord nel tuo browser</a>
+                </div>
+            </div>
+        </section> -->
      </header>
 
      <!-- MAIN WITH 4 SECTION -->
