add hero section

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <li><a href="#">Assistenza</a></li>
             </ul>
 
-            <a class="btn" href="#">Accedi</a>
+            <a class="btn-small" href="#">Accedi</a>
         </nav>
 
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="inner-hero">
                 <h1>Il tuo posto per parlare</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae rem corporis explicabo repellat, quis ab atque pariatur esse, voluptate, harum optio itaque iusto? Itaque delectus modi dignissimos molestias in ipsum reiciendis eaque suscipit ut aspernatur accusamus vero molestiae, maxime repellat?</p>
-                <div class="buttons">
-                    <a href="#" class="btn">Scarica per mac</a>
-                    <a href="#" class="btn">Apri Discord nel tuo browser</a>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, accusantium velit? Unde aliquam nam accusamus delectus rem, necessitatibus velit. Natus, obcaecati, blanditiis nam pariatur</p>
+                <div class="buttons-hero">
+                    <a href="#" class="btn-big white"> &#8595 Scarica per Mac</a>
+                    <a href="#" class="btn-big black">Apri Discord nel tuo browser</a>
                 </div>
             </div>
-        </section> -->
+        </section>
      </header>
 
      <!-- MAIN WITH 4 SECTION -->
