--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="hero">
             <div class="inner-hero">
                 <h1>Il tuo posto per parlare</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, accusantium velit? Unde aliquam nam accusamus delectus rem, necessitatibus velit. Natus, obcaecati, blanditiis nam pariatur</p>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
                 <div class="buttons-hero">
                     <a href="#" class="btn-big white"> &#8595 Scarica per Mac</a>
                     <a href="#" class="btn-big black">Apri Discord nel tuo browser</a>
