--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
                 <div class="buttons-hero">
-                    <a href="#" class="btn-big white"> &#8595 Scarica per Mac</a>
+                    <a href="#" class="btn-big"> &#8595 Scarica per Mac</a>
                     <a href="#" class="btn-big black">Apri Discord nel tuo browser</a>
                 </div>
             </div>
@@ -38,8 +38,14 @@
 
      <!-- MAIN WITH 4 SECTION -->
 
-     <main class="debug">
-        <section class="debug">1</section>
+     <main class="debug ">
+        <section class="flex-container">
+            <img src="img/item1.svg" alt="">
+            <div class="txt">
+                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali telemayici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </section>
         <section class="debug bg-gray">2</section>
         <section class="debug">3</section>
         <section class="debug bg-gray">4</section>
