--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
      <!-- MAIN WITH 4 SECTION -->
 
-     <main class="debug ">
+     <main>
         <section class="flex-container">
             <img src="img/item1.svg" alt="">
             <div class="txt">
@@ -46,9 +46,18 @@
                 <p>I server Discord sono organizzati in canali telemayici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
-        <section class="debug bg-gray">2</section>
-        <section class="debug">3</section>
-        <section class="debug bg-gray">4</section>
+
+        <section class="bg-gray">
+            <div class="flex-container-reverse">
+                <img src="img/item2.svg" alt="">
+                <div class="txt">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che se lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+            </div>
+            
+        </section>
+        
     </main>
 
       <!-- FOOTER -->
