add footer items

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
             <div class="footer-row">
                 <div class="footer-col">
                     <h3>Il tuo posto per parlare</h3>
+                    
+                     <select class="lenguages">
+                        <option>Italiano</option>
+                        <option>English</option>
+                     </select>
+                    
                     <div class="social-links">
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
