--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <a class="btn-small" href="#">Accedi</a>
         </nav>
 
-        <section class="hero">
+        <section class="hero flexbox">
             <div class="inner-hero">
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
                 <div class="buttons-hero">
-                    <a href="#" class="btn-big"> &#8595 Scarica per Mac</a>
+                    <a href="#" class="btn-big"><i class="fa-solid fa-down-long"></i>&nbsp;Scarica per Mac</a>
                     <a href="#" class="btn-big black">Apri Discord nel tuo browser</a>
                 </div>
             </div>
@@ -71,7 +71,11 @@
             </div>
         </section>
 
-        <section class="single-column">
+        <div class="wave">
+            <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path></svg>
+        </div>
+
+        <section class="single-column bg-gray">
 
             <div class="contents">
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
@@ -83,7 +87,7 @@
             <div class="call-to-acrion">
                 <img src="img/stars.svg" alt="">
                 <h3>Pronto a iniziare la tua avventura?</h3>
-                <a href="#" class="btn-big liliac">&#8595 Scarica per Mac</a>
+                <a href="#" class="btn-big liliac"><i class="fa-solid fa-down-long"></i>&nbsp;Scarica per Mac</a>
             </div>
 
         </section>
