--- a/index.html
+++ b/index.html
@@ -39,8 +39,19 @@
         </section>
     </header>
      
-
     <!-- MAIN WITH 4 SECTION -->
+
+    <main>
+        <section class="bg-white">
+            <div class="flex-containe">
+                <img class="img-main" src="img/item1.svg" alt="">
+                <div class="txt">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali telemayici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     
 
