--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
             <div class="footer-row">
                 <div class="footer-col">
                     <h3>Il tuo posto per parlare</h3>
-                    <label for="lang"><i class="fa-regular fa-flag"></i></label>
+                    
+                    <img class="flag" src="img/ita.png" alt="italian flag">
+                    
                      <select class="lang">
                         <option>Italiano</option>
                         <option>English</option>
